# PlatformDetection

./: CMakeLists.txt  README.md
include/BRISE/: compiler.h  platform.h
src/: empty.cpp
tests/: CMakeLists.txt  main.cpp
