###################################################################################
#
#	MIT License
#
#   Copyright (c) 2017 MARTIAL Alexis
#
#   Permission is hereby granted, free of charge, to any person obtaining a copy
#   of this software and associated documentation files (the "Software"), to deal
#   in the Software without restriction, including without limitation the rights
#   to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
#   copies of the Software, and to permit persons to whom the Software is
#   furnished to do so, subject to the following conditions:
#
#   The above copyright notice and this permission notice shall be included in all
#   copies or substantial portions of the Software.
#
#   THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
#   IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
#   FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
#   AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
#   LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
#   OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
#   SOFTWARE.
#
###################################################################################

# Needed version for Cmake
cmake_minimum_required(VERSION 3.0)

# Project name
project (BRISE_PlatformDetection CXX)#Format "BRISE_NameOfTheLibrary"

# Set variales
set(INC_DIR include)#include directory
set(SRC_DIR src)#include directory
set(TEST_DIR test)#Test subproject directory

# Lists of the dependecies
set(LIBS
    #LibName
)

#Auto sources' list génération
file(GLOB SRC_FILES ${SRC_DIR}/*.cpp)
#Auto header's list génération
#file(GLOB INC_FILES ${INC_DIR}/BRISE/*.h)

#création of the library
#If there is no sources just add an empty.cpp file
add_library(${PROJECT_NAME} STATIC ${SRC_FILES})
#attach include directory to the library
target_include_directories(${PROJECT_NAME} PUBLIC ${INC_DIR})
#dependecies of the library
target_link_libraries(${PROJECT_NAME} PUBLIC ${LIBS})

#Adding the tests
enable_testing()
add_subdirectory(tests)
